# sdk-nrf

./: CODEOWNERS  west.yml
applications/suit/flash_companion/: README.rst  prj.conf
cmake/sysbuild/: suit.cmake
doc/nrf/: applications.rst
doc/nrf/device_guides/working_with_nrf/nrf54h/: ug_nrf54h20_suit_customize_dfu.rst
modules/nrfxlib/nrf_802154/sl/platform/: nrf_802154_platform_sl_lptimer_zephyr.c
samples/multicore/recovery/: Kconfig.sysbuild  sysbuild.cmake
samples/nrf5340/multiprotocol_rpmsg/: CMakeLists.txt  README.rst
samples/nrf5340/multiprotocol_rpmsg/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/mpsl/: Kconfig
subsys/mpsl/fem/: Kconfig
subsys/mpsl/init/: mpsl_init.c
subsys/sdfw_services/services/extmem/: extmem_remote.c
sysbuild/: Kconfig.suit  suit.cmake
